# python-text-rpg

./: .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
application/dto/: character_dto.py  travel_dto.py
application/use_cases/character/: __init__.py  create_character.py  get_character_stats.py  travel.py
application/use_cases/combat/: perform_attack_use_case.py  start_combat.py
application/use_cases/events/: generate_event_use_case.py
config/: game_config.json
data/characters/: char_001.json  characters.json
data/enemies/: bandit.json  enemies.json  goblin_01.json  skeleton.json
data/items/armor/: chest_01.json  chests.json  helmet_01.json  helmets.json
data/items/consumables/: consumables.json  health_potion.json
data/items/weapons/: axe_01.json  one_hand_clubs.json  one_hand_swords.json  sword_01.json  sword_02.json  two_hand_axes.json
data/locations/: forest_dark.json  town.json  town_main.json  wilderness.json
domain/entities/: character.py  enemy.py  event.py  item.py  location.py
domain/repositories/: __init__.py  character_repository.py  enemy_repository.py  item_repository.py  location_repository.py
domain/services/: combat_calculator.py  event_generator.py  loot_generator.py  stats_calculator.py
domain/value_objects/: __init__.py  combat_stats_base.py  damage_range.py  enemy_stats.py  item_rarity.py  item_type.py  stats.py
presentation/telegram/: bot.py  formatters.py  handlers.py  keyboards.py
tests/: conftest.py
(+17 files in other folders)
